# ArucoTags-Opencv

./: CMakeCache.txt  CMakeLists.txt  Makefile  aruco_simple  aruco_simple.cpp  cmake_install.cmake
